@@ -42,9 +42,14 @@ import javax.swing.text.JTextComponent;
 
 public abstract class LookAndFeel
 {
+  /**
+   * This method is called once by UIManager.setLookAndFeel to create
+   * the look and feel specific defaults table.
+   *
+   * @return the UI defaults
+   */
   public UIDefaults getDefaults()
   {
-    //This method is called once by UIManager.setLookAndFeel to create the look and feel specific defaults table.
     return null;
   }
 
@@ -54,76 +59,110 @@ public abstract class LookAndFeel
 
   public abstract String getName();
 
+  /**
+   * UIManager.setLookAndFeel calls this method before the first call
+   * (and typically the only call) to getDefaults(). 
+   */
   public void initialize()
   {
-    //UIManager.setLookAndFeel calls this method before the first call (and typically the only call) to getDefaults(). 
   }
 
-  static void installBorder(JComponent c, String defaultBorderName)
+  /**
+   * Convenience method for installing a component's default Border object
+   * on the specified component if either the border is currently null
+   * or already an instance of UIResource. 
+   */
+  public static void installBorder(JComponent c, String defaultBorderName)
   {
-    //Convenience method for installing a component's default Border object on the specified component if either the border is currently null or already an instance of UIResource. 
   }
 
-  public static void installColors(JComponent c, String defaultBgName,
-                                   String defaultFgName)
+  /**
+   * Convenience method for initializing a component's foreground and
+   * background color properties with values from the current defaults table.
+   */
+  public static void installColors(JComponent c, String defaultBgName, String defaultFgName)
   {
-    //Convenience method for initializing a component's foreground and background color properties with values from the current defaults table. 
   }
 
-  public static void installColorsAndFont(JComponent c, String defaultBgName,
-                                          String defaultFgName,
-                                          String defaultFontName)
+  /**
+   * Convenience method for initializing a components foreground background
+   * and font properties with values from the current defaults table. 
+   */
+  public static void installColorsAndFont(JComponent component,
+					  String defaultBgName,
+					  String defaultFgName,
+					  String defaultFontName)
   {
-    //Convenience method for initializing a components foreground background and font properties with values from the current defaults table. 
   }
 
   public abstract boolean isNativeLookAndFeel();
 
   public abstract boolean isSupportedLookAndFeel();
 
+  /**
+   * Loads the bindings in keys into retMap. 
+   */
   public static void loadKeyBindings(InputMap retMap, Object[] keys)
   {
-    //Loads the bindings in keys into retMap. 
   }
 
+  /**
+   * Creates a ComponentInputMap from keys. 
+   */
   public static ComponentInputMap makeComponentInputMap(JComponent c,
-                                                        Object[] keys)
+							Object[] keys)
   {
-    //    Creates a ComponentInputMap from keys. 
     return null;
   }
 
+  /**
+   * Utility method that creates a UIDefaults.LazyValue that creates an
+   * ImageIcon UIResource for the specified gifFile filename. 
+   */
   public static Object makeIcon(Class baseClass, String gifFile)
   {
-    //Utility method that creates a UIDefaults.LazyValue that creates an ImageIcon UIResource for the specified gifFile filename. 
     return null;
   }
 
+  /**
+   * Creates a InputMap from keys. 
+   */
   public static InputMap makeInputMap(Object[] keys)
   {
-    //Creates a InputMap from keys. 
     return null;
   }
 
+  /**
+   * Convenience method for building lists of KeyBindings.  
+   */
   public static JTextComponent.KeyBinding[] makeKeyBindings(Object[] keyBindingList)
   {
-    //        Convenience method for building lists of KeyBindings.  
     return null;
   }
 
+  /**
+   * Returns a string that displays and identifies this object's properties.
+   *
+   * @return the string "LookAndFeel"
+   */
   public String toString()
   {
-    //Returns a string that displays and identifies this object's properties. 
     return "LookAndFeel";
   }
 
+  /**
+   * UIManager.setLookAndFeel calls this method just before we're replaced by
+   * a new default look and feel. 
+   */
   public void uninitialize()
   {
-    //UIManager.setLookAndFeel calls this method just before we're replaced by a new default look and feel. 
   }
 
+  /**
+   * Convenience method for un-installing a component's default border on the
+   * specified component if the border is currently an instance of UIResource.
+   */
   public static void uninstallBorder(JComponent c)
   {
-    //Convenience method for un-installing a component's default border on the specified component if the border is currently an instance of UIResource.
   }
 }
